assets/css/components/header.scss
main .stripes {
  position: absolute;
  z-index: -1;
  width: 100%;
  display: grid;
  transform: skewY(-12deg);
}

$meetupRed: #F4224B;
$twitterBlue: #138BF2;
$facebookBlue: #2C4388;
$slackGreen: #1B924B;

main header .stripes {
  display: grid;
  transform: skewY(-12deg);
  top: 0;
  grid: repeat(4,130px)/repeat(10,1fr);
  transform-origin: 0;
  background: linear-gradient(#f7d652, #fee37a 10%, #fff6d7 38%, #fff9e5 48%, #fcfbf6 62%);
}


main header .stripes :nth-child(1) {
  grid-column: span 3;
  background: linear-gradient(100grad,rgba(255, 255, 243, 0.913),rgba(255, 255, 243, 0.625) 20%,rgba(255, 255, 243, 0));
}

main header .stripes :nth-child(2) {
  grid-area: 3 / span 3 / auto / -1;
  background: linear-gradient(100grad,rgba(255, 255, 243, 0), rgba(255, 255, 243, 0.625) 20%, rgba(255, 255, 243, 0.913),);  
}

main header .stripes :nth-child(3) {
  grid-row: 4;
  grid-column: span 5;
  background: linear-gradient(100grad,#fff 50%,rgba(0, 0, 0, 0));
}


main header  {

  .Top-bar {
    padding: 2rem 1.6rem;
    display: flex;
    justify-content: space-between;
    .logo {
      width: 6rem;
    }
    nav {
      display: flex;
      flex-direction: row;
      a {
        text-decoration: none;
        color: black;
        font-weight: 500;
        font-family: 'Raleway';
        margin-left: 2rem;
        &:hover {
          color: lighten(black, 50%);
        }
      }
    }
  }
  .H1 {
    padding: 2rem 1.6rem;
    display: flex;
    justify-content: center;
    text-align: center;
  }
  .Content {
    padding: 2rem 5rem;
    display: flex;
    .Half {
      width: 100%;
    }
    .Text {
      text-align: justify;
    }
    .Social {
      margin: 2rem 0;
      display: flex;
      a {
        width: 4rem;
        height: 2.8rem;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-right: 2rem;
        box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
        border-radius: 4px;
        &:hover {
          transform: translateY(-1px);
          box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
        }
        img {
          height: 2rem;
        }
        &.Meetup {
          background-color: $meetupRed;
          &:active {
            background-color: darken($meetupRed, 10%);
          }
        }
        &.Twitter {
          img {
            height: 1.5rem;
          }
          background-color: $twitterBlue;
          &:active {
            background-color: darken($twitterBlue, 10%);
          }
        }
        &.Facebook {
          background-color: $facebookBlue;
          &:active {
            background-color: darken($facebookBlue, 10%);
          }
        }
        &.Slack {
          background-color: $slackGreen;
          &:active {
            background-color: darken($slackGreen, 10%);
          }
        }
      }
    }

  }
}

@media (max-width: 600px) {
  main header {
    .Top-bar {
      padding: 1rem 1.6rem;
      .logo {
        width: 4rem;
      }
      nav {
        flex-direction: column;
        align-items: flex-end;
        a {
          margin: 0;
        }
      }
    }
    .H1 {
      padding: 0 2rem;
    }
    .Content {
      flex-direction: column;
    }

  }
  
}

main .stripes {
  position: absolute;
  z-index: -1;
  width: 100%;
  display: grid;
  transform: skewY(-12deg)
}

